src/objects/Application_Information__c.object
<CustomObject>
    <description>This object is for the Project Central - Application Registry application and supports the &quot;Application&quot; object. This object tracks the information types tracked in each application.</description>
    <fields>
        <fullName>Application_Version__c</fullName>
        <label>Application Version</label>
        <referenceTo>Application_Version__c</referenceTo>
        <relationshipLabel>Application Information</relationshipLabel>
        <relationshipName>Application_Information</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Classified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financially_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financially Sensitive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <referenceTo>Information__c</referenceTo>
        <relationshipLabel>Application Information</relationshipLabel>
        <relationshipName>Application_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PII__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Sensitive?</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Information</label>
    <nameField>
        <displayFormat>AI-{0000000}</displayFormat>
        <label>Application Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>